<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_movie_black_24dp"
        android:title="@string/title_Movie" />

    <item
        android:id="@+id/navigation_tvshow"
        android:icon="@drawable/ic_tv_black_24dp"
        android:title="@string/title_Tvshow" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/title_Favorite" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_alarm"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_alarm" />

</menu>
